WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
ASSIGNED
68731
Outline sides are clipped in multicol and regions (regions fix landed)
https://bugs.webkit.org/show_bug.cgi?id=68731
Summary
Outline sides are clipped in multicol and regions (regions fix landed)
Alan Stearns
Reported
2011-09-23 14:33:22 PDT
Created
attachment 108536
[details]
Testcase for multicol If you have an element with an outline set that is displayed either in a region or a column, the sides of the outline do not display.
Attachments
Testcase for multicol
(381 bytes, text/html)
2011-09-23 14:33 PDT
,
Alan Stearns
no flags
Details
Testcase for regions
(388 bytes, text/html)
2011-09-23 14:33 PDT
,
Alan Stearns
no flags
Details
Patch
(24.53 KB, patch)
2011-10-05 09:56 PDT
,
Dave Hyatt
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alan Stearns
Comment 1
2011-09-23 14:33:44 PDT
Created
attachment 108537
[details]
Testcase for regions
Radar WebKit Bug Importer
Comment 2
2011-09-30 16:08:50 PDT
<
rdar://problem/10218167
>
Dave Hyatt
Comment 3
2011-10-05 09:56:44 PDT
Created
attachment 109813
[details]
Patch
Dave Hyatt
Comment 4
2011-10-05 09:58:33 PDT
Fixing this for multicol is really a separate bug. The attached patch fixes the issue for regions. I want to re-implement columns using regions anyway. :)
Darin Adler
Comment 5
2011-10-05 09:59:33 PDT
Comment on
attachment 109813
[details]
Patch Does the test case cover all the changes?
Dave Hyatt
Comment 6
2011-10-05 10:01:10 PDT
It does yes. Outline spilling out to the top/left gives you a negative overflow and tests the subsequent changes to translation and clipping.
Dave Hyatt
Comment 7
2011-10-05 10:04:50 PDT
Regions fix landed in
r96718
. Cutting regions tracking bug dependency and leaving open for a multi-column fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug