https://bugs.webkit.org/show_bug.cgi?id=68731

Outline sides not painted for region. Fix the painting and hit testing code for regions to add in
the maximalOutlineSize on unclipped sides. Also fix some math errors with the computation of the
translation offset and clip rects when overflow or outlines spill out.

Reviewed by Darin Adler.

Source/WebCore:

Added new test in fast/regions.

* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::paintIntoRegion):
(WebCore::RenderFlowThread::hitTestRegion):
* rendering/RenderRegion.cpp:
(WebCore::RenderRegion::regionOverflowRect):

LayoutTests:

* fast/regions/outline-sides-in-region.html: Added.
* platform/mac/fast/regions/outline-sides-in-region-expected.png: Added.
* platform/mac/fast/regions/outline-sides-in-region-expected.txt: Added.



Canonical link: https://commits.webkit.org/85479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96718 268f45cc-cd09-0410-ab3c-d52691b4dbfc